# Solana-Templates

./: README.md
1- counter/: Cargo.toml
1- counter/src/: instructions.rs  lib.rs
2- CPI-transfer-template/: Cargo.toml
2- CPI-transfer-template/src/: lib.rs
2- CPI-transfer-template/tests/: test.rs
2- CPI-transfer/src/: lib.rs
2- CPI-transfer/tests/: test.rs
3- review-program/: instruction.rs  lib.rs  state.rs
4- review-frontend/: README.md  package-lock.json  package.json
4- review-frontend-template/: package-lock.json  package.json
4- review-frontend-template/src/components/: AppBar.tsx  ReviewCard.tsx  WalletContextProvider.tsx
4- review-frontend-template/src/models/: Review.ts
4- review-frontend-template/src/pages/: index.tsx
4- review-frontend-template/src/util/: fetchReviews.ts
4- review-frontend/src/components/: Form.tsx
4- review-frontend/src/pages/: _app.tsx  index.tsx
4- review-frontend/src/util/: fetchReviews.ts
