[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.2.1"
borsh-derive = "1.2.1"
solana-program = "1.17.7"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"
