[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.6"
spl-token = { version = "4.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.17.6"
solana-sdk = "1.17.6"

[lib]
crate-type = ["cdylib", "lib"]